added required images

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span class="material-symbols-outlined">
             apps
         </span>
-        <img src="profile.png">
+        <img src="assets/profile.png">
     </header>
     <main>
         <h1>Google</h1>
